<resources>
    <string name="app_name">hw3</string>
    <string name="austria">Austria</string>
    <string name="colombia">Colombia</string>
    <string name="denmark">Denmark</string>
    <string name="italy">Italy</string>
    <string name="madagascar">Madagascar</string>
    <string name="switzerland">Switzerland</string>
    <string name="thailand">Thailand</string>
    <string name="poland">Poland</string>
    <string name="to_Constraint">to constraint</string>
    <string name="to_Frame">to Frame</string>
    <string name="to_linear">to Linear</string>
    <string name="to_main">to main</string>
    <string name="https_www_google_com">https://www.google.com/</string>
    <string name="show_image">show image</string>
</resources>