<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <ImageView
            android:layout_width="@dimen/dp_140"
            android:layout_height="@dimen/dp_84"
            android:src="@drawable/flag_of_austria_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/austria"
            android:textSize="@dimen/sp_30" />

        <ImageView
            android:layout_width="@dimen/dp_140"
            android:layout_height="@dimen/dp_84"
            android:layout_marginTop="@dimen/dp_90"
            android:src="@drawable/flag_of_colombia_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_154"
            android:layout_marginTop="@dimen/dp_120"
            android:text="@string/colombia"
            android:textSize="@dimen/sp_30" />

        <ImageView
            android:layout_width="@dimen/dp_140"
            android:layout_height="@dimen/dp_84"
            android:layout_marginTop="@dimen/dp_180"
            android:src="@drawable/flag_of_denmark_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_154"
            android:layout_marginTop="@dimen/dp_204"
            android:text="@string/denmark"
            android:textSize="@dimen/sp_30" />

        <ImageView
            android:layout_width="@dimen/dp_140"
            android:layout_height="@dimen/dp_84"
            android:layout_marginTop="@dimen/dp_270"
            android:src="@drawable/flag_of_italy_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_154"
            android:layout_marginTop="@dimen/dp_288"
            android:text="@string/italy"
            android:textSize="@dimen/sp_30" />

        <ImageView
            android:layout_width="@dimen/dp_140"
            android:layout_height="@dimen/dp_84"
            android:layout_marginTop="@dimen/dp_360"
            android:src="@drawable/flag_of_madagascar_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_154"
            android:layout_marginTop="@dimen/dp_372"
            android:text="@string/madagascar"
            android:textSize="@dimen/sp_30" />

        <ImageView
            android:layout_width="@dimen/dp_140"
            android:layout_height="@dimen/dp_84"
            android:layout_marginTop="@dimen/dp_450"
            android:src="@drawable/flag_of_poland_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_154"
            android:layout_marginTop="@dimen/dp_476"
            android:text="@string/poland"
            android:textSize="@dimen/sp_30" />

        <ImageView
            android:layout_width="@dimen/dp_140"
            android:layout_height="@dimen/dp_84"
            android:layout_marginTop="@dimen/dp_540"
            android:src="@drawable/flag_of_switzerland_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_154"
            android:layout_marginTop="@dimen/dp_560"
            android:text="@string/switzerland"
            android:textSize="@dimen/sp_30" />

        <ImageView
            android:layout_width="@dimen/dp_140"
            android:layout_height="@dimen/dp_84"
            android:layout_marginTop="@dimen/dp_630"
            android:src="@drawable/flag_of_thailand_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_154"
            android:layout_marginTop="@dimen/dp_660"
            android:text="@string/thailand"
            android:textSize="@dimen/sp_30" />


    </FrameLayout>
</androidx.core.widget.NestedScrollView>