<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/toMainFromConstr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_mainactivity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageThailand">

        </Button>


        <ImageView
            android:id="@+id/imageAustria"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_42"
            android:src="@drawable/flag_of_austria_svg"
            app:layout_constraintRight_toLeftOf="@id/textAustria"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp">

        </ImageView>

        <TextView
            android:id="@+id/textAustria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/austria"
            android:textSize="@dimen/sp_30"
            app:layout_constraintLeft_toRightOf="@id/imageAustria"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <ImageView
            android:id="@+id/imageColombia"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_8"
            android:src="@drawable/flag_of_colombia_svg"
            app:layout_constraintRight_toLeftOf="@id/textColombia"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageAustria"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp">

        </ImageView>

        <TextView
            android:id="@+id/textColombia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/colombia"
            android:textSize="@dimen/sp_30"
            app:layout_constraintLeft_toRightOf="@id/imageAustria"
            app:layout_constraintTop_toBottomOf="@id/imageAustria" />

        <ImageView
            android:id="@+id/imageDenmark"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_8"
            android:src="@drawable/flag_of_denmark_svg"
            app:layout_constraintRight_toLeftOf="@id/textColombia"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageColombia"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp">

        </ImageView>

        <TextView
            android:id="@+id/textDenmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/denmark"
            android:textSize="@dimen/sp_30"
            app:layout_constraintLeft_toRightOf="@id/imageDenmark"
            app:layout_constraintTop_toBottomOf="@id/imageColombia">

        </TextView>

        <ImageView
            android:id="@+id/imageItaly"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_8"
            android:src="@drawable/flag_of_italy_svg"
            app:layout_constraintRight_toLeftOf="@id/textDenmark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageDenmark"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp">

        </ImageView>

        <TextView
            android:id="@+id/textItaly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/italy"
            android:textSize="@dimen/sp_30"
            app:layout_constraintLeft_toRightOf="@id/imageItaly"
            app:layout_constraintTop_toBottomOf="@id/imageDenmark">

        </TextView>

        <ImageView
            android:id="@+id/imageMadagascar"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_8"
            android:src="@drawable/flag_of_madagascar_svg"
            app:layout_constraintRight_toLeftOf="@id/textItaly"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageItaly"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp">

        </ImageView>

        <TextView
            android:id="@+id/textMadagascar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/madagascar"
            android:textSize="@dimen/sp_30"
            app:layout_constraintLeft_toRightOf="@id/imageMadagascar"
            app:layout_constraintTop_toBottomOf="@id/imageItaly">

        </TextView>

        <ImageView
            android:id="@+id/imagePoland"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_8"
            android:src="@drawable/flag_of_poland_svg"
            app:layout_constraintRight_toLeftOf="@id/textMadagascar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageMadagascar"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp">

        </ImageView>

        <TextView
            android:id="@+id/textPoland"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/poland"
            android:textSize="@dimen/sp_30"
            app:layout_constraintLeft_toRightOf="@id/imagePoland"
            app:layout_constraintTop_toBottomOf="@id/imageMadagascar">

        </TextView>

        <ImageView
            android:id="@+id/imageSwitzerland"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_8"
            android:src="@drawable/flag_of_switzerland_svg"
            app:layout_constraintRight_toLeftOf="@id/textPoland"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagePoland"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp">

        </ImageView>

        <TextView
            android:id="@+id/textSwitzerland"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/switzerland"
            android:textSize="@dimen/sp_30"
            app:layout_constraintLeft_toRightOf="@id/imageSwitzerland"
            app:layout_constraintTop_toBottomOf="@id/imagePoland">

        </TextView>

        <ImageView
            android:id="@+id/imageThailand"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_8"
            android:src="@drawable/flag_of_thailand_svg"
            app:layout_constraintRight_toLeftOf="@id/textSwitzerland"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageSwitzerland"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp">

        </ImageView>

        <TextView
            android:id="@+id/textThailand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/thailand"
            android:textSize="@dimen/sp_30"
            app:layout_constraintLeft_toRightOf="@id/imageThailand"
            app:layout_constraintTop_toBottomOf="@id/imageSwitzerland">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

